[project]
name = "call-me-maybe"
version = "1.0.0"
description = "AI-powered function calling engine using a LLM to convert natural language prompts into validated JSON function calls"
authors = [{name = "sarfreit"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy",
    "torch",
    "llm-sdk",
    "accelerate>=1.14.0",
]

[dependency-groups]
dev = ["flake8", "mypy"]

[tool.uv.sources]
llm-sdk = { path = "./llm_sdk" }

[tool.flake8]
exclude = ["__pycache__", ".venv", "llm_sdk", ".mypy_cache"]

[tool.mypy]
exclude = ["__pycache__", ".venv", "llm_sdk"]
disable_error_code = ["import-untyped"]

